--- a/src/components/Chart/Chart.module.scss
+++ b/src/components/Chart/Chart.module.scss
@@ -42,11 +42,7 @@
 }
 
 .blockGrid {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  flex: 1;
   z-index: 1;
 }
 
